@@ -6,11 +6,40 @@ CONTRACT_TYPE
     // Unique name of the contract type (required)
     name = SimpleTestContract
 
-    // Contract text details
+    // Contract title is displayed in the window in the corner, shoudl be short
+    // and descritive
     title = Simple Test Contract
-    description = A more detailed description of the contract.  This is where you come in.
+
+    // Two options for specifying the description:
+    // 1) Supply the full text here in the description field
+    //description = A more detailed description of the contract.
+
+    // 2) Supply the following fields, which will be fed into the text
+    //    generator.  Use of the CoherentContracts mod is highly recommended,
+    //    as it generates far more meaningful text.
+    topic = ContractConfigurator  // Topic of the contract.  Should be a
+                                  // singular noun.
+    subject = Kerbal              // Subject of the contract.  See
+                                  // CoherentContracts for some possible values.
+                                  // Includes stuff like Kerbal, Experiment,
+                                  // Parts, Mun, MunSrf, etc.
+    motivation = test             // Motivation for why we are doing the
+                                  // contract.  See CoherentContracts for some
+                                  // possible values.  Some values used are:
+                                  // flags, test, rescue.
+
+    // Contract notes are displayed in mission control.  Use it to give 
+    // any special instructions.
+    //
+    // Optional
     notes = These are the contract level notes.
+
+    // The contract synopsis appears in bold.  Give a quick summary of the
+    // contract objective.
     synopsis = We want you to do a thing.
+
+    // The completedMessage is the message that is displayed when the contract
+    // completes.
     completedMessage = You have done the thing.
 
     // Agent (agency).  If not populated, a random agent will be selected.
