@@ -1,6 +1,7 @@
 ContractConfigurator (UNRELEASED)
 - Support for disabling other contract types
 - Support for contract level notes.
+- Support for using TextGen generated descriptions.
 - Various minor bug-fixes.
 
 ContractConfigurator 0.2.0
